# PsychOS

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SCROLLABLE_MENU_QUICKSTART.md  What kind of issue is this?.md
source/: BLE_DOCUMENTATION.md  CMakeLists.txt  ESP-IDF_MIGRATION.md  MENU_SYSTEM.md  MIGRATION_SUMMARY.md  README.md  RGB_DOCUMENTATION.md  SERIAL_COMMANDS.md  TEST_PLAN_SCROLLING.md  platformio.ini  sdkconfig.defaults  source.code-workspace
source/.lh/: platformio.ini.json
source/.lh/include/: displayUI.h.json  globals.h.json
source/.lh/src/: config.h.json  driver.py.json  index.html.json  main.cpp.json
source/include/: ILI9341_display.h  arduino_compat.h  ble_compat.h  descriptors_control.h  encoder_compat.h  globals.h  main.h  multiplexer.h  neopixel_compat.h  tasks.h  translations.h  tusb_config.h  usbDescriptors.c  usb_descriptors.h  usb_hid_compat.h
source/include/UI/: main.h
source/include/boardConfig/: 2x2.h  prototype0.h
source/include/boardConfiguration/: prototype0.h  test.h  test2x2.h
source/include/display/: displayContent.cpp  displayContent.h  icons.h  pixelFlushScreen.h  screens.h
source/include/fonts/: DucklonMusk_3_520pt7b.h
source/include/functions/: customHID.cpp  customHID.h  eeprom_manager.cpp  initializeBLE.h  initializeMatrix.h  submitKeyPress.cpp  submitKeyPress.h
source/include/keyboards/: 2x2.h  prototype0.h
source/include/tasks/: BLEHandler.cpp  BLEHandler.h  buzzer.cpp  buzzer.h  clock.cpp  (+21 more)
source/src/: arduino_compat.cpp  ble_compat.cpp  config.h  dbus_media_listener.py  driver.py  encoder_compat.cpp  globals.cpp  index.html  main.cpp  main.h  translations.cpp  usb_hid_compat.cpp
(+66 files in other folders)
