idf_component_register(
    SRCS 
        "src/main.cpp"
        "src/globals.cpp"
        "src/translations.cpp"
        "src/arduino_compat.cpp"
        "src/ble_compat.cpp"
        "src/encoder_compat.cpp"
        "src/tasks/commandProcessor.cpp"
        "src/tasks/displayHandler.cpp"
        "src/tasks/matrixScan.cpp"
        "src/tasks/wpmCounter.cpp"
        "src/tasks/buzzer.cpp"
        "src/tasks/BLEHandler.cpp"
        "src/tasks/hostCommunicationBridge.cpp"
        "src/tasks/clock.cpp"
        "src/tasks/serialHandler.cpp"
        "src/tasks/mediaHandler.cpp"
        "src/tasks/rgbHandler.cpp"
        "src/tasks/knobHandler.cpp"
        "src/utils/initializeBLE.cpp"
        "src/utils/initializeMatrix.cpp"
        "src/utils/benchmark.cpp"
        "src/utils/eeprom_manager.cpp"
        "src/display/screenSaver.cpp"
        "src/display/mainScreen.cpp"
        "src/display/rgbScreen.cpp"
        "src/display/settingsScreen.cpp"
        "src/display/clockScreen.cpp"
        "src/display/modulesScreen.cpp"
        "src/display/components/uiComponents.cpp"
        "src/display/displayContent.cpp"
        "src/display/pixelFlushScreen.cpp"
        "src/display/mediaScreen.cpp"
    INCLUDE_DIRS 
        "include"
        "include/tasks"
        "include/display"
        "include/display/components"
        "include/drivers"
        "include/drivers/multiplexer"
        "include/drivers/rotaryEncoder"
        "include/utils"
        "include/fonts"
    REQUIRES 
        driver 
        esp_timer 
        nvs_flash 
        bt
        led_strip
)
